--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
+title: Muhong Gao's Homepage
+page-top-title: Muhong Gao
 top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2025. All Rights Reserved.'
+home-subtitle: Muhong Gao&ensp;|&ensp;高慕鸿
+copyright-text: '&copy; Muhong Gao 2024-2025. All Rights Reserved.'
