--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Muhong Gao's Homepage
 page-top-title: Muhong Gao
-top-section-bg-text: Computer Science
+top-section-bg-text: 
 home-subtitle: Muhong Gao&ensp;|&ensp;高慕鸿
 copyright-text: '&copy; Muhong Gao 2024-2025. All Rights Reserved.'
